versions/26.2.0/docs/MediaFileMiniReference.md
# MediaFileMiniReference


## Properties

Name | Type | Description | Notes
------------ | ------------- | ------------- | -------------
**id** | **int** |  | 
**name** | **str** |  | [optional] [readonly] 
**bundle** | **int, none_type** |  | [optional] [readonly] 
**full_path** | **str** |  | [optional] [readonly] 
**custom_fields** | **{str: (str, none_type)}** |  | [optional] [readonly] 
**is_dir** | **bool** |  | [optional] [readonly] 
**is_hardlink** | **bool** |  | [optional] [readonly] 
**mtime** | **int** |  | [optional] [readonly] 
**parent** | **int, none_type** |  | [optional] [readonly] 
**parent_file** | **{str: (bool, date, datetime, dict, float, int, list, str, none_type)}** |  | [optional] [readonly] 
**path** | **str** |  | [optional] [readonly] 
**path_permissions** | [**PathPermissions**](PathPermissions.md) |  | [optional] 
**present** | **bool** |  | [optional] [readonly] 
**archived** | **bool** |  | [optional] [readonly] 
**restore_expires_at** | **datetime, none_type** |  | [optional] [readonly] 
**size** | **int** |  | [optional] [readonly] 
**storage_class** | **str, none_type** |  | [optional] [readonly] 
**volume** | [**VolumeMiniWithCloudAccount**](VolumeMiniWithCloudAccount.md) |  | [optional] 

[[Back to Model list]](../#documentation-for-models) [[Back to API list]](../#documentation-for-api-endpoints) [[Back to README]](../)


